fixed blog spacing

--- a/blocks/toc/toc.css
+++ b/blocks/toc/toc.css
@@ -24,8 +24,3 @@
   margin-bottom: 15px;
   font-size: 24px;
 }
-
-/* Blog TOC */
-.blog .toc-container .toc-wrapper {
-  margin-top: 0;
-}
